alignment on desktop fixed

--- a/styles/partials/_footer.scss
+++ b/styles/partials/_footer.scss
@@ -11,7 +11,7 @@
     }
 
     @include desktop {
-      max-width: 1250px;
+      max-width: 1220px;
       margin: 0 auto;
     }
   }
