--- a/styles/partials/_main.scss
+++ b/styles/partials/_main.scss
@@ -21,7 +21,7 @@
       margin: 0 2.25rem;
     }
     @include desktop {
-      max-width: 1250px;
+      max-width: 1220px;
       margin: 0 auto;
     }
   }
@@ -38,7 +38,7 @@
         line-height: 1.8rem;
       }
       @include desktop {
-        width: 62%;
+        width: 64%;
       }
     }
   }
@@ -83,7 +83,7 @@
     }
 
     @include desktop {
-      max-width: 1250px;
+      max-width: 1220px;
       margin: 0 auto;
     }
   }
