--- a/styles/partials/_nav.scss
+++ b/styles/partials/_nav.scss
@@ -16,7 +16,7 @@
   }
 
   @include desktop {
-    max-width: 1250px;
+    max-width: 1220px;
     margin: 0 auto;
   }
 
